# IDRD-Pipeline

./: .gitignore  LICENSE  README.md  STRUCTURE.md  pyproject.toml  requirements.txt  roadmap.md  setup.py
.github/: copilot-instructions.md
data/ground_truth/: ground_truth.csv  temp.csv
data/gt_experiment/: report_2026-02-26_11-03-08.json  report_2026-02-26_14-07-42.json
docs/: SYSTEM_OVERVIEW.md
experiments/ground_truth/: gt_downloader.py  gt_fetcher.py  gt_report.py  gt_runner.py
outputs/: download_results.json  retrieved_results  retrieved_results.json
outputs/metadata/: conversion_results.json  download_results.json  retrieved_results.json
src/: README.md  __init__.py  config.py  main.py
src/Stage1-fetching/: __init__.py  api_usage.ipynb  fetching.py
src/Stage2_extraction/: __init__.py
src/Stage3-embeddings/: __init__.py
src/db/: __init__.py  db.py  publications.db
src/embeddings/: README.md
src/evaluation/: README.md  __init__.py
src/extraction/: README.md  extractor-langextract.py  extractor.py  lx-example.py
src/extractor/: converter.py  downloader.py  tests.py
src/fetching/: README.md  __init__.py
src/ingestion/: converter.py  downloader.py  extractor.py  renderer.py
src/models/: __init__.py  results.py
src/pubfetcher/: __init__.py  api_usage.ipynb  client.py  fetching.py
src/schema/: db.py
src/utils/: db_utils.py  dict_parser.py  runtime_monitor.py
tests/: test_db.py  test_main_helpers.py  test_runtime_monitor.py
